--- a/src/components/search-with-dropdown-options/Search.css
+++ b/src/components/search-with-dropdown-options/Search.css
@@ -1,18 +1,16 @@
 .searchform{
-    margin: 50px;
-    margin-left: 30%;
-    padding: 50px;
+    margin: auto;
+    padding: 5%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .custom-select {
-    border: solid darkblue 1px;
 }
 select {
-    width: 150px;
-    height: 42px;
-    border: none;
+    width: max-content;
+    height: 75%;
     background-color: #075d98;
     color: white;
     padding: 5px;
@@ -23,8 +21,9 @@ select {
     background-image: url('images/searchicon.png');
     background-repeat: no-repeat;
     background-position: right;
-    width: 250px;
-    padding: 12px 20Px 12px 40px;
+    width: max-content;
+    height: 75%;
+    padding: 5px;
     background-size: contain;
 }
 
